feat: create navigation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,10 @@
     "explorer.fileNesting.patterns": {
         "*.ts": "$(capture).test.ts, $(capture).test.tsx",
         "*.tsx": "$(capture).test.ts, $(capture).test.tsx"
-    }
+    },
+
+    "tailwindCSS.experimental.classRegex": [
+        ["cva\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"],
+        ["cx\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"]
+    ]
 }
