--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "test:watch": "jest --watchAll"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
+    "class-variance-authority": "^0.7.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.2.1",
@@ -38,6 +41,7 @@
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-organize-imports": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.12",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5"
