feat: create potfolioCard but crop image not finish

--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   ],
   "tailwindFunctions": ["classNames"],
   "singleQuote": true,
-  "trailingComma": "es5"
+  "trailingComma": "es5",
+  "organizeImportsSkipDestructiveCodeActions": true
 }
