--- a/package.json
+++ b/package.json
@@ -14,11 +14,24 @@
     "test:watch": "jest --watchAll"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.12",
     "@heroicons/react": "^2.1.3",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@reduxjs/toolkit": "^2.2.2",
     "class-variance-authority": "^0.7.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-drag-and-drop": "^3.0.0",
+    "react-dropzone": "^14.2.3",
+    "react-easy-crop": "^5.0.6",
+    "react-images-uploading": "^3.1.7",
+    "react-redux": "^9.1.0",
+    "sortablejs": "^1.15.2",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.2"
   },
@@ -27,9 +40,11 @@
     "@commitlint/config-conventional": "^19.1.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.2",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/sortablejs": "^1.15.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
