--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
     "format:fix": "prettier --write --list-different \"src/**/*.{js,jsx,ts,tsx,css}\"",
     "prepare": "husky",
     "test": "jest",
-    "test:watch": "jest --watchAll"
+    "test:watch": "jest --watchAll",
+    "predeploy": "rimraf dist/ && yarn run build",
+    "deploy": "cross-env NODE_ENV=production firebase deploy --only functions,hosting"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.12",
+    "@hello-pangea/dnd": "^16.6.0",
     "@heroicons/react": "^2.1.3",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@reduxjs/toolkit": "^2.2.2",
     "class-variance-authority": "^0.7.0",
+    "firebase": "^10.11.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
