--- a/package.json
+++ b/package.json
@@ -25,19 +25,23 @@
     "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@reduxjs/toolkit": "^2.2.2",
+    "@types/react-slick": "^0.23.13",
     "class-variance-authority": "^0.7.0",
     "firebase": "^10.11.0",
-    "next": "14.1.4",
+    "next": "^14.0.2",
     "react": "^18",
-    "react-dom": "^18",
+    "react-dom": "^18.2.0",
     "react-drag-and-drop": "^3.0.0",
     "react-dropzone": "^14.2.3",
     "react-easy-crop": "^5.0.6",
     "react-images-uploading": "^3.1.7",
     "react-redux": "^9.1.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "sortablejs": "^1.15.2",
     "styled-components": "^6.1.8",
-    "tailwind-merge": "^2.2.2"
+    "tailwind-merge": "^2.2.2",
+    "zod": "^3.22.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.2.1",
@@ -47,7 +51,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react-dom": "^18.2.14",
     "@types/sortablejs": "^1.15.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
@@ -61,6 +65,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.12",
+    "sass": "^1.75.0",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5"
