feat: create skill and timeLine component

--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-date-pickers": "^7.3.1",
     "@reduxjs/toolkit": "^2.2.2",
     "@types/react-slick": "^0.23.13",
+    "@types/uuid": "^9.0.8",
     "class-variance-authority": "^0.7.0",
+    "dayjs": "^1.11.11",
     "firebase": "^10.11.0",
     "next": "^14.0.2",
     "react": "^18",
@@ -41,6 +44,7 @@
     "sortablejs": "^1.15.2",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.2",
+    "uuid": "^9.0.1",
     "zod": "^3.22.5"
   },
   "devDependencies": {
