--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "deploy": "cross-env NODE_ENV=production firebase deploy --only functions,hosting"
   },
   "dependencies": {
+    "@auth/firebase-adapter": "^2.0.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.12",
@@ -30,8 +31,9 @@
     "@types/uuid": "^9.0.8",
     "class-variance-authority": "^0.7.0",
     "dayjs": "^1.11.11",
-    "firebase": "^10.11.0",
+    "firebase": "^10.5.0",
     "next": "^14.0.2",
+    "next-auth": "^5.0.0-beta.4",
     "react": "^18",
     "react-dom": "^18.2.0",
     "react-drag-and-drop": "^3.0.0",
@@ -45,7 +47,7 @@
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.2",
     "uuid": "^9.0.1",
-    "zod": "^3.22.5"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.2.1",
