--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,13 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    // "src/app/auth.ts",
+    // "src/app/auth.config.ts"
+  ],
   "exclude": ["node_modules"]
 }
