--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,8 +29,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    // "src/app/auth.ts",
-    // "src/app/auth.config.ts"
+    "src/app/auth.ts",
+    "src/app/auth.config.ts"
   ],
   "exclude": ["node_modules"]
 }
