--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "incremental": true,
     "declaration": true,
     "noImplicitAny": true,
+    "preserveSymlinks": true,
     "plugins": [
       {
         "name": "next"
