--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,13 @@
 {
   "hosting": {
-    "public": "Public",
+    "source": ".",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "frameworksBackend": {
+      "region": "asia-east1"
+    }
   }
 }
