--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.0",
     "dayjs": "^1.11.11",
     "firebase": "^10.11.0",
+    "firebase-functions": "^5.0.1",
     "next": "^14.0.2",
     "next-auth": "^5.0.0-beta.15",
     "react": "^18",
