--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "sortablejs": "^1.15.2",
     "styled-components": "^6.1.10",
     "tailwind-merge": "^2.2.2",
+    "use-debounce": "^10.0.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
