--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "deploy": "cross-env NODE_ENV=production firebase deploy --only functions,hosting"
   },
   "dependencies": {
+    "@auth/core": "^0.31.0",
     "@auth/firebase-adapter": "^2.0.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -75,6 +76,7 @@
     "prettier-plugin-tailwindcss": "^0.5.12",
     "sass": "^1.75.0",
     "tailwindcss": "^3.3.0",
+    "ts-jest": "^29.1.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
