--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "firebase-functions": "^5.0.1",
     "next": "^14.0.2",
     "next-auth": "^5.0.0-beta.15",
+    "next-firebase-auth-edge": "^1.5.3",
     "react": "^18",
     "react-dom": "^18.2.0",
     "react-drag-and-drop": "^3.0.0",
